<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100sp"
        android:textSize="30sp"
        android:text="@string/encryption_name"
        android:textStyle="bold">

    </TextView>

    <LinearLayout
        android:id="@+id/upload_file"
        android:layout_below="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20sp"

        >
        <TextView
            android:id="@+id/upload_file_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:width="200sp"
            android:height="110sp"
            android:gravity="left"
            android:text="@string/text_file"
            android:layout_marginLeft="20sp"
            android:background="@drawable/bottom_line"
            android:textStyle="italic"
            android:textColor="@color/grey"
            android:paddingStart="20sp"
            android:paddingEnd="20sp"
            android:layout_marginBottom="10sp"

            >

        </TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="0sp"
            >
            <TextView
                android:id="@+id/enter_btn_textfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="100sp"
                android:height="50sp"
                android:layout_marginLeft="30sp"


                android:text="@string/browse_file"
                android:textSize="20sp"
                android:textAlignment="center"

                android:background="@drawable/btn_browse_background"
                android:textColor="@color/white"
                android:paddingTop="10sp"

                >

            </TextView>
            <TextView
                android:id="@+id/reset_btn_textfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="100sp"
                android:height="50sp"
                android:layout_marginLeft="30sp"


                android:text="@string/reset"
                android:textSize="20sp"
                android:textAlignment="center"

                android:background="@drawable/btn_reset_background"
                android:textColor="@color/white"
                android:paddingTop="10sp"
                android:layout_marginTop="10sp"
                >

            </TextView>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/upload_file_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/upload_file"
        android:orientation="horizontal"
        android:layout_marginTop="50sp">

        <TextView
            android:id="@+id/filename_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:width="200sp"
            android:height="110sp"
            android:layout_marginBottom="10sp"


            android:text="@string/key_file"
            android:layout_marginLeft="20sp"
            android:background="@drawable/bottom_line"
            android:textStyle="italic"
            android:paddingStart="20sp"
            android:paddingEnd="20sp"
            android:textColor="@color/grey"
            android:gravity="left"
            >

        </TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="0sp"
            >
            <TextView
                android:id="@+id/enter_btn_keyfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="100sp"
                android:height="50sp"
                android:layout_marginLeft="30sp"


                android:text="@string/browse_file"
                android:textSize="20sp"
                android:textAlignment="center"

                android:background="@drawable/btn_browse_background"
                android:textColor="@color/white"
                android:paddingVertical="10sp"
                >
            </TextView>
            <TextView
                android:id="@+id/reset_btn_keyfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="100sp"
                android:height="50sp"
                android:layout_marginLeft="30sp"
                android:layout_marginTop= "10sp"

                android:text="@string/reset"
                android:textSize="20sp"
                android:textAlignment="center"

                android:background="@drawable/btn_reset_background"
                android:textColor="@color/white"
                android:paddingVertical="10sp"
                >
            </TextView>
        </LinearLayout>
    </LinearLayout>


    <Spinner
        android:id="@+id/user_choice"
        android:layout_below="@+id/upload_file_key"
        android:layout_width="200sp"
        android:layout_height="30sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40sp"
        android:background="@drawable/spinner_background"
        android:paddingStart="10sp"
        >

    </Spinner>


    <TextView
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="100sp"
        android:height="50sp"
        android:layout_below="@+id/user_choice"
        android:background="@drawable/btn_browse_background"
        android:layout_marginTop="50sp"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_enter"
        android:textSize="20sp"
        android:textAlignment="center"
        android:paddingTop="10sp"
        android:textColor="@color/white">

    </TextView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start"
        android:layout_marginBottom="20sp"
        android:layout_marginTop="30sp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/developer"
            android:layout_alignParentBottom="true"
            >

        </TextView>
    </RelativeLayout>
</RelativeLayout>